# aqua-matrix-agent

./: CLAUDE.md  Cargo.toml  README.md
.claude/skills/: e2e-test  heartbeat  matrix-message
Skills/claude-bridge/: skill.md
Skills/claude-channel/: skill.md
Skills/e2e-test/: skill.md
Skills/heartbeat/: skill.md
crates/aqua-matrix-agent/: Cargo.toml
crates/aqua-matrix-agent/examples/: chat_e2e_driver.rs  invite_probe.rs
crates/aqua-matrix-agent/src/: lib.rs  main.rs
crates/aqua-matrix-claude-p/: Cargo.toml
crates/aqua-matrix-claude-p/src/: main.rs  pending.rs
crates/aqua-matrix-heartbeat/: Cargo.toml
crates/aqua-matrix-heartbeat/src/: main.rs  ops.rs
crates/aqua-matrix-relay/: Cargo.toml
crates/aqua-matrix-relay/examples/: echo_agent.rs
crates/aqua-matrix-relay/src/: lib.rs
docs/: ARCHITECTURE.md  RECOVERY.md  REFERENCE.md
docs/plans/: chat-confirmations-e2e-handover.md  chat-confirmations.md
src/: claude_channel.rs  heartbeat.rs  lib.rs  main.rs
systemd/: aqua-matrix-claude-channel.service  aqua-matrix-heartbeat.service  claude-bridge.service
